--- a/index.html
+++ b/index.html
@@ -121,74 +121,8 @@
               candidates and races, links to news and more.
             </h4>
           </div>
-          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <!-- <form> -->
-            <div class="form-row">
-              <!-- Begin Mailchimp Signup Form -->
-              <div id="mc_embed_signup">
-                <form
-                  action="https://bettergov.us7.list-manage.com/subscribe/post?u=41b3f3673000e91eee2aa89e7&amp;id=c88b648bc5"
-                  method="post"
-                  id="mc-embedded-subscribe-form"
-                  name="mc-embedded-subscribe-form"
-                  class="validate"
-                  target="_blank"
-                  novalidate
-                >
-                  <!-- <label for="mce-EMAIL">Get Updates</label> -->
-                  <p>
-                    Sign up to be notified when we publish new content and
-                    features to Chi.vote.
-                  </p>
-                  <div id="mc_embed_signup_scroll" class="form-row">
-                    <div class="col-12 col-md-9 mb-2 mb-md-0">
-                      <input
-                        class="form-control form-control-lg"
-                        placeholder="Enter your email..."
-                        type="email"
-                        value=""
-                        name="EMAIL"
-                        id="mce-EMAIL"
-                        required
-                      />
-                    </div>
-                    <div class="col-12 col-md-3">
-                      <input
-                        class="btn btn-block btn-lg btn-primary"
-                        type="submit"
-                        value="Sign up!"
-                        name="subscribe"
-                        id="mc-embedded-subscribe"
-                      />
-                    </div>
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div
-                      style="position: absolute; left: -5000px;"
-                      aria-hidden="true"
-                    >
-                      <input
-                        type="text"
-                        name="b_41b3f3673000e91eee2aa89e7_c88b648bc5"
-                        tabindex="-1"
-                        value=""
-                      />
-                    </div>
-
-                    <!-- <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div> -->
-                  </div>
-                </form>
-              </div>
-              <!--End mc_embed_signup-->
-            </div>
-            <!-- </form> -->
-          </div>
         </div>
-      </div>
-    </header>
-
-    <section class="features-icons bg-light text-center">
-      <div class="container">
-        <div class="row">
+        <div class="row features-icons">
           <div class="col-lg-4">
             <a class="feature-link" href="./faq/">
               <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
@@ -228,6 +162,72 @@
               </div>
             </a>
           </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="bg-light text-center py-5">
+      <div class="container">
+        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+          <!-- <form> -->
+          <div class="form-row">
+            <!-- Begin Mailchimp Signup Form -->
+            <div id="mc_embed_signup">
+              <form
+                action="https://bettergov.us7.list-manage.com/subscribe/post?u=41b3f3673000e91eee2aa89e7&amp;id=c88b648bc5"
+                method="post"
+                id="mc-embedded-subscribe-form"
+                name="mc-embedded-subscribe-form"
+                class="validate"
+                target="_blank"
+                novalidate
+              >
+                <!-- <label for="mce-EMAIL">Get Updates</label> -->
+                <p>
+                  Sign up to be notified when we publish new content and
+                  features to Chi.vote.
+                </p>
+                <div id="mc_embed_signup_scroll" class="form-row">
+                  <div class="col-12 col-md-9 mb-2 mb-md-0">
+                    <input
+                      class="form-control form-control-lg"
+                      placeholder="Enter your email..."
+                      type="email"
+                      value=""
+                      name="EMAIL"
+                      id="mce-EMAIL"
+                      required
+                    />
+                  </div>
+                  <div class="col-12 col-md-3">
+                    <input
+                      class="btn btn-block btn-lg btn-primary"
+                      type="submit"
+                      value="Sign up!"
+                      name="subscribe"
+                      id="mc-embedded-subscribe"
+                    />
+                  </div>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div
+                    style="position: absolute; left: -5000px;"
+                    aria-hidden="true"
+                  >
+                    <input
+                      type="text"
+                      name="b_41b3f3673000e91eee2aa89e7_c88b648bc5"
+                      tabindex="-1"
+                      value=""
+                    />
+                  </div>
+
+                  <!-- <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div> -->
+                </div>
+              </form>
+            </div>
+            <!--End mc_embed_signup-->
+          </div>
+          <!-- </form> -->
         </div>
       </div>
     </section>
